--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Fitness</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="wrapper">
+		<div class="container">
+			<header>
+				<a href="#">
+					<img src="img/logo.png" alt="Fitness logo">
+				</a>
+				<nav class="primary-nav">
+					<ul>
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Товары</a></li>
+						<li><a href="#">О_нас</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</nav>
+			</header>
+		</div><!-- end container-->
+	</div><!-- end wrapper-->
 </body>
 </html>
