--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 					</ul>
 				</nav>
 			</header>
+			<main>
+				<aside class="goods">
+					<ul>
+						<li><a href="#">Ноутбуки</a></li>
+						<li><a href="#">Планшеты</a></li>
+						<li><a href="#" class="active">Телефоны</a></li>
+						<li><a href="#">Телевизоры</a></li>
+						<li><a href="#">Бытовая техника</a></li>
+						<li><a href="#">Автотовары</a></li>
+					</ul>
+				</aside>
+			</main>
 		</div><!-- end container-->
 	</div><!-- end wrapper-->
 </body>
