--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
 						<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 					</div>
 				</div><!-- end content-->
-				<div class="clear"></div>
 			</main>
+			<footer class="footer clear">
+				<div class="footer-nav">
+					<ul>
+						<li><a href="#">Главная</a></li>
+						<li><a href="#" class="activ">Товары</a></li>
+						<li><a href="#">О_нас</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</div><!-- end footer-nav-->
+				<div class="copyright">
+					2014 &copy; All rights reserved
+				</div><!-- end copyright-->
+				<div class="clear"></div>
+			</footer>
 		</div><!-- end container-->
 	</div><!-- end wrapper-->
 </body>
